--- a/1.Curso/FilmCatalgue/gradle/wrapper/gradle-wrapper.properties
+++ b/1.Curso/FilmCatalgue/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,6 @@
-#Sun Oct 11 17:47:14 COT 2020
+#Sun Oct 18 00:19:34 COT 2020
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-6.1.1-all.zip
+distributionUrl=https\://services.gradle.org/distributions/gradle-6.5-bin.zip
