--- a/1.Curso/RegistroDeSuperheroes/app/src/main/AndroidManifest.xml
+++ b/1.Curso/RegistroDeSuperheroes/app/src/main/AndroidManifest.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="pe.com.dyd.example.registrodesuperheroes">
+    <uses-permission android:name="android.permission.CAMERA"/>
+    <uses-feature android:name="android.hardware.camera2" android:required="true"></uses-feature>
 
     <application
         android:allowBackup="true"
