--- a/1.Curso/EMonitor/app/src/main/AndroidManifest.xml
+++ b/1.Curso/EMonitor/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="pe.com.dyd.example.emonitor">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
