--- a/Firebase/FirebaseTutorial/app/src/main/AndroidManifest.xml
+++ b/Firebase/FirebaseTutorial/app/src/main/AndroidManifest.xml
@@ -9,7 +9,10 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.FirebaseTutorial">
         <activity
-            android:name=".MainActivity"
+            android:name=".HomeActivity"
+            android:exported="false" />
+        <activity
+            android:name=".AuthActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
