Actualizacion del app: Mejoras en el código - Implementación Data Binding

--- a/1.Curso/MiEdadCanina/app/build.gradle
+++ b/1.Curso/MiEdadCanina/app/build.gradle
@@ -2,7 +2,6 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 30
-    buildToolsVersion "30.0.1"
 
     defaultConfig {
         applicationId "pe.com.dyd.example.miedadcanina"
@@ -20,6 +19,12 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+
+    buildFeatures {
+        dataBinding true
+    }
+
+    namespace 'pe.com.dyd.example.miedadcanina'
 }
 
 dependencies {
