--- a/Firebase/FirebaseTutorial/app/src/main/AndroidManifest.xml
+++ b/Firebase/FirebaseTutorial/app/src/main/AndroidManifest.xml
@@ -9,16 +9,24 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.FirebaseTutorial">
         <activity
-            android:name=".HomeActivity"
-            android:exported="false" />
-        <activity
-            android:name=".AuthActivity"
+            android:name=".SplashActivity"
+            android:theme="@style/SplashTheme"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".MainActivity"
+            android:exported="false" />
+        <activity
+            android:name=".HomeActivity"
+            android:exported="false" />
+        <activity
+            android:name=".AuthActivity"
+            android:exported="true">
         </activity>
     </application>
 
